overflow fix

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    overflow-x: hidden
 }
 
 html,
@@ -292,7 +291,9 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center;    
+    overflow-x: hidden;
+
 }
 
 .logos {
@@ -313,6 +314,8 @@ display:block;
     font-size: 16px;
     text-align: left;
     list-style-position: inside;
+    overflow-x: hidden;
+
 }
 
 .video{
@@ -361,6 +364,7 @@ ul {
 }
 
 .imageContainer {
+    overflow-x: hidden;
     width: 60%;
     display:flex;
     flex-direction:column;
@@ -374,6 +378,7 @@ ul {
 }
 
 .imageContainerTop {
+    overflow-x: hidden;
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -384,6 +389,7 @@ ul {
 }
 
 .imageContainerTop2{
+    overflow-x: hidden;
     width:80%;
     justify-content:center;
     align-items:center;
@@ -391,11 +397,13 @@ ul {
 
 
 .imageContainerTop img {
+    overflow-x: hidden;
     border-radius: 10px;
     width:80%;
 }
 
 .imageContainer img {
+    overflow-x: hidden;
     width: 100%;
     border-radius: 10px;
     margin-bottom:15px;
